MMB-1345, consider also 'host' field when comparing mmserver nodes. Plus some java 1.5 featurism.
git-svn-id: https://scm.mmbase.org/mmbase/trunk@21699 91430c5f-d668-0410-9e7d-dd663366dcfd